--- a/src/components/Quizzes/QuizResults/styles.css
+++ b/src/components/Quizzes/QuizResults/styles.css
@@ -32,5 +32,6 @@
 @media screen and (max-width: 575px) {
   .QuizResult {
     grid-template-columns: 1fr;
+    padding: 10px 10px 0px 10px;
   }
 }
